<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mc_layout"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mc" />
        <item
            android:id="@+id/nav_mh_layout"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_mh" />
        <item
            android:id="@+id/nav_mp_layout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_mp" />
        <item
            android:id="@+id/nav_mcha_layout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_mcha" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_notice_layout"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_notice" />
            <item
                android:id="@+id/nav_tools_layout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_tools" />
        </menu>
    </item>

</menu>
